Changes on add button: fix some margin problems, adds style animation on :hover and :active.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
                 <h3 class="main__title">Add item</h2>
             </div>
             <div class="inputs__container">
-
-                <input type="text" id="inputTask" class="input" placeholder="Insert one task/item and click on Add">
+                <input type="text" id="inputTask" class="input" placeholder="Enter your task and click Add">
                 <button class="btnAdd" id="btnAdd">
                     <img src="./assets/add.svg"></img>
-                    <span>New task</span>
+                    <span>Add</span>
                 </button>
 
             </div>
