--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
         <div class="main">
             <div class="title">
-                <h3 class="main__title">Add item</h2>
+                <h3 class="main__title">add item</h2>
             </div>
             <div class="inputs__container">
                 <input type="text" id="inputTask" class="input" placeholder="Enter your task and click Add">
                 <button class="btnAdd" id="btnAdd">
                     <img src="./assets/add.svg"></img>
-                    <span>Add</span>
+                    <span>add</span>
                 </button>
 
             </div>
